--- a/src/App.css
+++ b/src/App.css
@@ -107,10 +107,13 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 @theme {
-  --primary: #37AFE1;
-  --primary-foreground: #4CC9FE;
+  --primary: #37afe1;
+  --primary-foreground: #4cc9fe;
 }
 @layer base {
+  a {
+    @apply !text-gray-700 hover:!text-gray-900 hover:!underline;
+  }
   * {
     @apply border-border outline-ring/50;
   }
